src/test/deca/context/invalid/protected-otherClass.deca
class Konoha {
    protected int habitants;
}
class SuperKonoha {
    int habitants() {
        Konoha Konoha2 = new Konoha();
        return Konoha2.habitants;
    }
}
{}
